--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/js-cookie": "^3.0.2",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
+    "query-string": "^7.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.4.4",
+    "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
